--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,12 +1,13 @@
-schema_version = "1.0.0"
-id = "quick_interpolation"
-version = "1.0.0"
-name = "Quick Interpolation"
-tagline = "Easily apply texture interpolation settings across textures"
-maintainer = "Austin Egge <austinegge@gmail.com>"
-type = "add-on"
 blender_version_min = "4.2.0"
-tags = ["Material", "User Interface"]
+id = "quick_interpolation"
 license = ["SPDX:GPL-3.0-or-later",]
+maintainer = "Austin Egge <austinegge@gmail.com>"
+name = "Quick Interpolation"
+schema_version = "1.0.0"
+tagline = "Easily apply texture interpolation settings across textures"
+type = "add-on"
+version = "1.0.0"
+website = "https://github.com/austinegge/quick_interpolation"
 copyright = ["2024 Austin Egge",]
-platforms = ["windows-x64", "macos-arm64", "linux-x64"]
+tags = ["Material", "User Interface"]
+platforms = ["windows-x64", "macos-arm64", "macos-x64", "linux-x64"]
